--- a/5_loading_text_data_to_solr/ContractRegistryDownloader/src/main/resources/application.conf
+++ b/5_loading_text_data_to_solr/ContractRegistryDownloader/src/main/resources/application.conf
@@ -4,7 +4,7 @@
 
 spark{
 	#Spark master for whole application. yarn or local (local[n])
-	spark_master = "local[*]"
+	spark_master = "yarn"
 	
 	#Application name used for Spark Session
 	app_name = "ContractRegistry"
@@ -61,6 +61,33 @@ application{
 	
 	#Charset used while parsing XML data
 	xml_charset = "UTF-8"
+	
+	#SOLR connection string
+	solr_url = "http://localhost:8983/solr/registrsmluv/"
+	
+	#SOLR update request handler for binary documents like PDF, word etc.
+	solr_update_request_url = "/update/extract"
+	
+	#HBase table used for attachments storage
+	hbase_attachments_table = "registry-attachments"
+	
+	#HBase column family of table used for attachments storage
+	hbase_attachments_table_col_family = "data"
+	
+	#HBase column family of table used for attachments storage
+	hbase_attachments_table_key = "document"
+	
+	#Core Metastore database
+	metastore_core_db = "jakub_augustin"
+	
+	#Table name of registry table
+	metastore_registry_table_name = "core_cr_registry"
+	
+	#Table name of attachments table
+	metastore_attachments_table_name = "core_cr_attachments"
+	
+	#Table name of contract party table
+	metastore_contract_party_table_name = "core_cr_contract_party"
 }
 
 skips{
@@ -68,11 +95,17 @@ skips{
 	skip_download_xml = true
 	
 	#Skip write parsed data phase
-	skip_write_parsed_xml = false
+	skip_write_parsed_xml = true
 	
 	#Skip download atachment docs phase
 	skip_download_docs = true
 	
+	#Skip writing core tables
+	skip_write_core_tables = false
+	
 	#Skip skip OCR parsing of atachment docs phase
 	skip_parse_to_text = true
+	
+	#Skip SOLR indexing phase
+	skip_solr_indexing = true
 }
